--- a/scratch.html
+++ b/scratch.html
@@ -95,6 +95,15 @@
                 </script>
             </div>
 
+            <div class="youtube">
+                <iframe 
+                    width="560" height="315" src="https://www.youtube.com/embed/nf1poiiK-RQ" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                    allowfullscreen>
+                </iframe>
+            </div>
+            
+
             <!-- Insert fast food images here -->
             <div class="images">
                 <img src="assets/img/logo-Arby's.jpg" alt="Arby's Logo">
