--- a/scratch.html
+++ b/scratch.html
@@ -9,7 +9,7 @@
 <body class="scratchbg">
     <div>
         <!-- Header -->
-        <p href="index.html" id="Top" class="onpage-link">GO TO PROFESSIONAL PAGES</p>
+        <a href="index.html" id="Top" class="onpage-link">GO TO PROFESSIONAL PAGES</a>
         <a href="AIGame.html" class="onpage-link">Build Your Own Burger (Game!)</a>
         <div class="header">
             Scratch Page
