--- a/experience.html
+++ b/experience.html
@@ -65,12 +65,12 @@
                         <h4 style="font-style: italic; font-weight: 650;">Brigham Young University (Provo, UT)</h4>
                         <h5 style="font-weight: normal;">Office Secratery, Mechanical Engineering Department (Jan 2025-present)</h5>
                         <ul style="font-size: 17px;">
-                            <li>- Help students and professors with daily department information through verbal and written communication.
-                                - Authorize student and professor travel and purchases.
-                                - Solve purchasing issues on behalf of students and professors online and via phone calls.
-                                - Reconcile purchases
-                                - Organize course exams and materials on behalf of professors.
-                                - Complete miscellaneous tasks assigned by department secretary.</li>
+                            <li>Help students and professors with daily department information through verbal and written communication.</li>
+                            <li>Authorize student and professor travel and purchases.</li>
+                            <li>Solve purchasing issues on behalf of students and professors online and via phone calls.</li>
+                            <li>Reconcile purchases</li>
+                            <li>Organize course exams and materials on behalf of professors.</li>
+                            <li>Complete miscellaneous tasks assigned by department secretary.</li>
                         </ul>
                         <h5 style="font-weight: normal; ">Teaching Assistant, TMA 140 Script Analysis (Jan 2025-Apr 2025)</h5>
                         <ul style="font-size: 17px;">
