--- a/education.html
+++ b/education.html
@@ -62,6 +62,7 @@
                                     <li>2023 to 2027</li>
                                     <li>Prospective Bachelor of Science in Human Resource Management, Marriott School of Business</li>
                                     <li>Minor in Theatre Arts Studies, College of Fine Arts and Communications</li>
+                                    <li>Prospective additional minor in Computer Science, College of Computational, Mathematical, and Physical Sciences</li>
                                     <li>GPA: 3.92</li>
                                     <ul><li style="font-size: 15px;">(<a href="contact.html" style="text-decoration: underline;">Contact</a> me for full transcript)</li></ul>
                                     <li>Dean's List '24</li>
@@ -79,7 +80,7 @@
                             </li>
                         </ol>
                         <br>
-                        <h1 class="subheading">Moving to the Marriott School of business</h1>
+                        <h1 class="subheading">Moving to the Marriott School of Business</h1>
                         <p>
                             I'm super excited to be studying here at BYU for my undergraduate degree! Originally, when I 
                             applied to BYU in 2023, I was enrolled in the College of Fine Arts to pursue a degree in Theater Education.
@@ -96,7 +97,7 @@
                             I love teaching others, training them, defining and refining positions within a workplace, and creating systems 
                             that allow others to fulfill their passion more efficiently. 
                         </p>
-                        <h1 class="subheading">Learning so Far</h1>
+                        <h1 class="subheading">Learning So Far</h1>
                         <p>
                             I declared myself a pre-business major in August of 2024, with the intent of applying to BYU's HRM program in June of 2025.
                             So far, I have had the opportunity to take a series of business pre-requisites that have taught me many invaluable skills 
