--- a/education.html
+++ b/education.html
@@ -100,10 +100,12 @@
                         <h1 class="subheading">Learning So Far</h1>
                         <p>
                             I declared myself a pre-business major in August of 2024, with the intent of applying to BYU's HRM program in June of 2025.
-                            So far, I have had the opportunity to take a series of business pre-requisites that have taught me many invaluable skills 
-                            and attitudes! I have resparked my inclination for analytical thinking in Statistics, accounting, marketing, and information
-                            systems classes. I am eagerly absorbing the knowledge from those around me and finding connections across subjects/fields, and
-                            building entirely new skillsets (see <a href="skills.html">skills</a> for more).
+                            I have also declared a minor in Theatre Arts Studies so I can utilize the knowledge and credits I have found there in my future as well.
+                            So far, in the MSB, I have had the opportunity to take a series of business pre-requisites that have taught me many invaluable skills 
+                            and attitudes! I have resparked my inclination for analytical thinking in statistics, accounting, marketing, and information
+                            systems classes. I've even sparked new interest in coding and other digital skills, and am looking to add another minor in Computer Systems
+                            through the College of Computational, Mathematical, and Physical Sciences. I am eagerly absorbing the knowledge from those around me and 
+                            finding connections across subjects/fields, and building entirely new skillsets (see <a href="skills.html">skills</a> for more).
                         </p>
                         <h1 class="subheading">Going Forward</h1>
                         <p> I strive to listen and understand other peoples' 
