--- a/education.html
+++ b/education.html
@@ -45,7 +45,7 @@
                         <div class="page-heading">
                             <h1 style="font-size: 50px;" id="top">Currently</h1>
                             <h1>Enrolled Student</h1>
-                            <span class="subheading">Brigham Young University, Marriott School of Business - Prospective Class of 2027</span>
+                            <span class="subheading">Brigham Young University, Marriott School of Business - Class of 2027</span>
                         </div>
                     </div>
                 </div>
@@ -60,12 +60,11 @@
                             <li style="font-weight: bold;">Brigham Young University (Provo, UT)
                                 <ul style="font-weight: normal;">
                                     <li>2023 to 2027</li>
-                                    <li>Prospective Bachelor of Science in Human Resource Management, Marriott School of Business</li>
+                                    <li>Bachelor of Science in Human Resource Management, Marriott School of Business</li>
                                     <li>Minor in Theatre Arts Studies, College of Fine Arts and Communications</li>
-                                    <li>Prospective additional minor in Computer Science, College of Computational, Mathematical, and Physical Sciences</li>
                                     <li>GPA: 3.92</li>
                                     <ul><li style="font-size: 15px;">(<a href="contact.html" style="text-decoration: underline;">Contact</a> me for full transcript)</li></ul>
-                                    <li>Dean's List '24</li>
+                                    <li>CFAC Dean's List '24</li>
                                 </ul>
                             </li>
                             <li style="font-weight: bold;">Franklin High School (Franklin, MA)
@@ -99,18 +98,18 @@
                         </p>
                         <h1 class="subheading">Learning So Far</h1>
                         <p>
-                            I declared myself a pre-business major in August of 2024, with the intent of applying to BYU's HRM program in June of 2025.
-                            I have also declared a minor in Theatre Arts Studies so I can utilize the knowledge and credits I have found there in my future as well.
-                            So far, in the MSB, I have had the opportunity to take a series of business pre-requisites that have taught me many invaluable skills 
+                            I was accepted to the Human Resources Management program in June 2025, and am loving my first semester of classes at BYU's Mariott School of Business.
+                            I have also declared a minor in Theatre Arts Studies so I can utilize the knowledge and credits I have found there as well.
+                            So far, in the MSB, I have had the opportunity to take a series of business pre-requisites and HRM junior core classes that have taught me many invaluable skills 
                             and attitudes! I have resparked my inclination for analytical thinking in statistics, accounting, marketing, and information
-                            systems classes. I've even sparked new interest in coding and other digital skills, and am looking to add another minor in Computer Systems
-                            through the College of Computational, Mathematical, and Physical Sciences. I am eagerly absorbing the knowledge from those around me and 
+                            systems classes. I've even sparked new interest in coding and other digital skills. I have also been inspired by many guest lectures and 
+                            I am eagerly absorbing the knowledge from those around me. I am
                             finding connections across subjects/fields, and building entirely new skillsets (see <a href="skills.html">skills</a> for more).
                         </p>
                         <h1 class="subheading">Going Forward</h1>
                         <p> I strive to listen and understand other peoples' 
                             motives and goals, and to help them find the right environment to thrive. With this drive, I know I will be a successful 
-                            HR manager! However, I have a lot to learn before I get there.
+                            HR Manager! However, I have a lot to learn before I get there.
                             I actively seek opportunities to learn of things that inherently pertain to HRM and things that don't.
                             I believe being well-rounded is an invaluable characteristic that allows people to thrive in various aspects of our lives.
                             Above all else, I seek to love all people the way Jesus Christ does. I have a fundemental belief in His love for us, and His desire for us to be successful.
