--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="site-heading">
                             <h1>Caelyn Towne</h1>
-                            <span class="subheading">Third-year student at Brigham Young University pursing Bachelor of Science in Human Resources Management.</p></span>
+                            <span class="subheading">Third-year student at Brigham Young University pursuing Bachelor of Science in Human Resources Management.</p></span>
                         </div>
                     </div>
                 </div>
