--- a/skills.html
+++ b/skills.html
@@ -65,7 +65,7 @@
                                     <li>Google Suite</li>
                                     <li>HTML, CSS, Bootstrap</li>
                                     <li>Microsoft</li>
-                                    <li>Pyhton</li>
+                                    <li>Python</li>
                                     <li>Structured Query Language</li>
                                     <li>Tableau</li>
                                     <li>Visual Basic for Applications (VBA) Programming in Excel</li>
